load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "svc_proto",
    srcs = ["model.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_proto"],
)

go_proto_library(
    name = "svc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/q3k/bugless/proto/svc",
    proto = ":svc_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":svc_go_proto"],
    importpath = "github.com/q3k/bugless/proto/svc",
    visibility = ["//visibility:public"],
)
