load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_closure//closure:defs.bzl", "closure_js_proto_library")
load("@com_github_grpc_grpc_web//bazel:closure_grpc_web_library.bzl", "closure_grpc_web_library")

proto_library(
    name = "svc_proto",
    srcs = [
        "model.proto",
        "search.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["//proto/common:common_proto"],
)

go_proto_library(
    name = "svc_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/q3k/bugless/proto/svc",
    proto = ":svc_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

closure_js_proto_library(
    name = "js",
    srcs = ["model.proto"],
    suppress = ["JSC_TYPE_MISMATCH"],
    visibility = ["//visibility:public"],
)

closure_grpc_web_library(
    name = "svc_grpc_web_proto",
    deps = [":svc_proto"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":svc_go_proto"],
    importpath = "github.com/q3k/bugless/proto/svc",
    visibility = ["//visibility:public"],
)
