load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pagination.go"],
    importpath = "github.com/q3k/bugless/svc/model/common/pagination",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/svc:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
