load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lex.go",
        "parse.go",
        "search.go",
    ],
    importpath = "github.com/q3k/bugless/svc/model/common/search",
    visibility = ["//visibility:public"],
    deps = ["//proto/common:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lex_test.go",
        "parse_test.go",
        "search_test.go",
    ],
    embed = [":go_default_library"],
)
