load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["validation.go"],
    importpath = "github.com/q3k/bugless/svc/model/common/validation",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:go_default_library",
        "//proto/svc:go_default_library",
    ],
)
