load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "db_autosession.go",
        "db_category.go",
        "db_errors.go",
        "db_issue.go",
    ],
    importpath = "github.com/q3k/bugless/svc/model/crdb/db",
    visibility = ["//visibility:public"],
    deps = [
        "//svc/model/crdb/db/migrations:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//database/cockroachdb:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@pl_hackerspace_code_hscloud//go/mirko:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "db_category_test.go",
        "db_issue_test.go",
        "db_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_cockroachdb_cockroach_go//testserver:go_default_library"],
)
