load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "issues.go",
        "issues_get.go",
        "service.go",
        "updates.go",
    ],
    importpath = "github.com/q3k/bugless/svc/model/crdb/service",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/common:go_default_library",
        "//proto/svc:go_default_library",
        "//svc/model/common/pagination:go_default_library",
        "//svc/model/common/search:go_default_library",
        "//svc/model/common/validation:go_default_library",
        "//svc/model/crdb/db:go_default_library",
        "@com_github_cockroachdb_cockroach_go_v2//testserver:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "issues_test.go",
        "service_test.go",
        "updates_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//proto/common:go_default_library",
        "//proto/svc:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)
